# ass2pgs

./: .gitattributes  .gitignore  README.md  config.example.toml  pyproject.toml
docs/: architecture.md  ubuntu-server.md
src/jellyfin_ass2pgs/: ass.py  cache.py  cli.py  config.py  frame_time.py  libass_renderer.py  library.py  metrics.py  mkv.py  mux.py  pgs.py  pipeline.py  renderer.py  renderplan.py  sup.py  tools.py
tests/: test_dynamic_render_fps.py  test_frame_time.py  test_libass_loading.py  test_library_conversion.py  test_pgs_rle.py  test_pipeline_group_failures.py  test_renderer_group_validation.py  test_renderplan_static_dp.py  test_synthetic_fixture.py  test_timeline_builder.py  test_track_selection.py  test_work_directory.py
tests/fixtures/: synthetic.ass
