[project]
name = "jellyfin-ass2pgs"
version = "0.1.0"
description = "Convert ASS subtitle tracks to visually faithful PGS tracks with libass."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
keywords = ["ass", "pgs", "jellyfin", "subtitles", "matroska"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy>=2.0",
    "Pillow>=10.0",
    "fonttools>=4.0",
    "pysubs2>=1.7",
    "rich>=13.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[project.scripts]
jellyfin-ass2pgs = "jellyfin_ass2pgs.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
